tests/init_state/projection/switch_enum_reads_place.err.expected
error: at 6:13: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'o' is used before initialization
   |
 6 |             switchEnum(o) [None: end, Some: end]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
